<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PiFragment"
    tools:visibility="visible">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="189dp"
        android:layout_height="82dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="110dp"
        android:contentDescription="@string/pi_game"
        android:src="@drawable/pi_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/big3_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="144dp"
        android:text="@string/pi_number_3"
        android:textColor="@color/primaryDarkColor"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pi_digits_textView"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="39dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/big3_textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:text="14159" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/user_input_layout"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="Required*"
        app:helperTextTextColor="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/big3_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="100"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="61dp"
        android:backgroundTint="@color/primaryColor"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/submit_button"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/quit_button"
        app:layout_constraintStart_toEndOf="@+id/retry_button"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:ignore="TextContrastCheck"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:width="25dp"
        android:height="55dp"
        android:text="@string/retry_button"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:ignore="TextContrastCheck"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="170dp"
        android:layout_height="190dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/score_label"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/userScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="#FF0000"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"
            tools:text="3" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/strikesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/strikes_label"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/userStrikes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="#FF0000"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"
            tools:text="0" />

    </LinearLayout>

    <Button
        android:id="@+id/quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:width="25dp"
        android:height="55dp"
        android:text="@string/quit_button"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>